@@ -218,6 +218,12 @@ of the terminal.
 .TP
 \fB\-\-dump\fP (\fB\-D\fP)
 Create an SQL dump.
+.TP
+\fB\-\-inserts\fP (\fB\-N\fP)
+Use INSERT INTO statements instead of COPY INTO + CSV values when
+dumping the data of a table.  This option can be used when trying to
+load data from MonetDB into another database, or when e.g. JDBC
+applications are used to reload the dump.
 .SS
 XQuery Options
 .TP
